--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "aws-cdk": "^1.119.0",
-    "aws-cdk-lib": "^2.0.0-rc.19",
     "constructs": "^3.3.133",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "@aws-cdk/aws-s3": "^1.121.0",
+    "@aws-cdk/core": "^1.121.0"
   }
 }
