--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "constructs": "^3.3.133",
+    "@types/node": "^16.7.10",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "@aws-cdk/aws-s3": "^1.121.0",
+    "@aws-cdk/aws-apigateway": "^1.121.0",
+    "@aws-cdk/aws-lambda": "^1.121.0",
     "@aws-cdk/core": "^1.121.0"
   }
 }
