--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "private": true,
   "devDependencies": {
     "@types/node": "^16.7.10",
+    "esbuild": "^0.12.25",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.121.0",
+    "@aws-cdk/aws-dynamodb": "^1.121.0",
     "@aws-cdk/aws-lambda": "^1.121.0",
-    "@aws-cdk/core": "^1.121.0"
+    "@aws-cdk/aws-lambda-nodejs": "^1.121.0",
+    "@aws-cdk/core": "^1.121.0",
+    "@types/uuid": "^8.3.1",
+    "uuid": "^8.3.2"
   }
 }
