--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/node": "^16.7.10",
     "@types/webpack": "^5.28.0",
+    "aws-cdk": "^1.121.0",
     "esbuild": "^0.12.25",
     "ts-loader": "^9.2.5",
     "ts-node": "^10.2.1",
