--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "@aws-cdk/aws-lambda-nodejs": "^1.121.0",
     "@aws-cdk/aws-s3": "^1.121.0",
     "@aws-cdk/core": "^1.121.0",
-    "@aws-sdk/client-s3": "^3.29.0",
     "@types/uuid": "^8.3.1",
-    "aws-crt": "^1.9.1",
+    "aws-sdk": "^2.984.0",
     "uuid": "^8.3.2"
   }
 }
