--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "webpack"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.83",
     "@types/node": "^16.7.10",
+    "@types/uuid": "^8.3.1",
     "@types/webpack": "^5.28.0",
     "aws-cdk": "^1.121.0",
     "esbuild": "^0.12.25",
@@ -26,7 +28,6 @@
     "@aws-cdk/aws-lambda-nodejs": "^1.121.0",
     "@aws-cdk/aws-s3": "^1.121.0",
     "@aws-cdk/core": "^1.121.0",
-    "@types/uuid": "^8.3.1",
     "aws-sdk": "^2.984.0",
     "uuid": "^8.3.2"
   }
