--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@aws-cdk/aws-lambda-nodejs": "^1.121.0",
     "@aws-cdk/aws-s3": "^1.121.0",
     "@aws-cdk/core": "^1.121.0",
-    "aws-sdk": "^2.984.0",
-    "uuid": "^8.3.2"
+    "aws-sdk": "^2.984.0"
   }
 }
