--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
         "${relativeFile}"
       ],
       "env": {
-        "AWS_REGION": "ap-east-1",
+        // "AWS_REGION": "ap-east-1",
         "TABLE_NAME": "SpacesTable",
         "PRIMARY_KEY": "spaceId"
       }
