--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-cli": "^4.8.0"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^4.3.5",
     "@aws-cdk/aws-apigateway": "^1.121.0",
     "@aws-cdk/aws-dynamodb": "^1.121.0",
     "@aws-cdk/aws-iam": "^1.121.0",
@@ -28,6 +29,7 @@
     "@aws-cdk/aws-lambda-nodejs": "^1.121.0",
     "@aws-cdk/aws-s3": "^1.121.0",
     "@aws-cdk/core": "^1.121.0",
+    "aws-amplify": "^4.2.9",
     "aws-sdk": "^2.984.0"
   }
 }
