--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "yarn build && cdk deploy"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.83",
